--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,17 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@mui/material": "^5.15.1",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@repo/ui": "*",
     "next": "^14.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.2",
