--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+      "env": ["NODE_ENV=production", "REDIS_HOST"]
     },
     "lint": {
       "dependsOn": ["^lint"]
