--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"],
-      "env": ["NODE_ENV=production", "REDIS_HOST"]
+      "env": ["NEXT_PUBLIC_GOOGLE_ANALYTICS_TOKEN"]
     },
     "lint": {
       "dependsOn": ["^lint"]
